crossplane-cli/validate/observed/route.ec2.aws.upbound.io-configuration-aws-network-9n2x8.yaml
apiVersion: ec2.aws.upbound.io/v1beta2
kind: Route
metadata:
  annotations:
    crossplane.io/composition-resource-name: route
    crossplane.io/external-create-pending: "2024-08-17T00:18:57Z"
    crossplane.io/external-create-succeeded: "2024-08-17T00:18:57Z"
    crossplane.io/external-name: r-rtb-0af6bc45f6642a9881080289494
  creationTimestamp: "2024-08-17T00:15:53Z"
  finalizers:
  - finalizer.managedresource.crossplane.io
  generateName: configuration-aws-network-
  generation: 2
  labels:
    crossplane.io/claim-name: ""
    crossplane.io/claim-namespace: ""
    crossplane.io/composite: configuration-aws-network
    networks.aws.platform.upbound.io/network-id: configuration-aws-network
  name: configuration-aws-network-9n2x8
  ownerReferences:
  - apiVersion: aws.platform.upbound.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: XNetwork
    name: configuration-aws-network
    uid: 74422427-ef9c-4d2c-bee5-3a6cfef8684d
  resourceVersion: "441914"
  uid: 20b42a25-e744-46df-8f3a-105fca8785c5
spec:
  deletionPolicy: Delete
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayId: igw-012d25a9b0e511222
    gatewayIdRef:
      name: configuration-aws-network-w7nb4
    gatewayIdSelector:
      matchControllerRef: true
    region: us-west-2
    routeTableId: rtb-0af6bc45f6642a988
    routeTableIdRef:
      name: configuration-aws-network-vbcgd
    routeTableIdSelector:
      matchControllerRef: true
  initProvider: {}
  managementPolicies:
  - '*'
  providerConfigRef:
    name: default
status:
  atProvider:
    carrierGatewayId: ""
    coreNetworkArn: ""
    destinationCidrBlock: 0.0.0.0/0
    destinationIpv6CidrBlock: ""
    destinationPrefixListId: ""
    egressOnlyGatewayId: ""
    gatewayId: igw-012d25a9b0e511222
    id: r-rtb-0af6bc45f6642a9881080289494
    instanceId: ""
    instanceOwnerId: ""
    localGatewayId: ""
    natGatewayId: ""
    networkInterfaceId: ""
    origin: CreateRoute
    routeTableId: rtb-0af6bc45f6642a988
    state: active
    transitGatewayId: ""
    vpcEndpointId: ""
    vpcPeeringConnectionId: ""
  conditions:
  - lastTransitionTime: "2024-08-17T00:18:57Z"
    reason: ReconcileSuccess
    status: "True"
    type: Synced
  - lastTransitionTime: "2024-08-17T00:19:58Z"
    reason: Available
    status: "True"
    type: Ready
  - lastTransitionTime: "2024-08-17T00:18:58Z"
    reason: Success
    status: "True"
    type: LastAsyncOperation
